// 1. Cấu hình Generator & Datasource
generator client {
  provider        = "prisma-client-js"
  output          = "../src/generated/prisma"
  previewFeatures = ["fullTextSearch", "fullTextIndex", "driverAdapters"]
}

datasource db {
  provider = "postgresql"
}

// --------------------------------------
// 2. ENUMS (Định nghĩa các tập giá trị chuẩn)
// --------------------------------------

enum UserRole {
  ADMIN
  CANDIDATE
  RECRUITER
}

enum JobType {
  FULL_TIME
  PART_TIME
  CONTRACT
  FREELANCE
  INTERNSHIP
  REMOTE
}

enum JobStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
  CLOSED
}

enum ApplicationStatus {
  APPLIED
  REVIEWING
  SHORTLISTED
  INTERVIEW_SCHEDULED
  INTERVIEWED
  OFFER_SENT
  OFFER_ACCEPTED
  OFFER_REJECTED
  HIRED
  REJECTED
  WITHDRAWN
}

enum Currency {
  VND
  USD
  EUR
  JPY
}

// --------------------------------------
// 3. USER MANAGEMENT (Quản lý người dùng)
// --------------------------------------

model User {
  id           String @id @default(uuid())
  email        String @unique
  passwordHash String

  firstName         String
  lastName          String
  phone             String?
  avatarUrl         String?
  /// Email dùng để nhận notification (có thể khác email đăng nhập / email Clerk)
  notificationEmail String?

  role UserRole @default(CANDIDATE)

  isVerified  Boolean   @default(false) // Email đã verify chưa
  isActive    Boolean   @default(true) // Có bị Admin ban không
  lastLoginAt DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  candidateProfile CandidateProfile?
  recruiterProfile RecruiterProfile?

  sentMessages     Message[]      @relation("SentMessages")
  receivedMessages Message[]      @relation("ReceivedMessages")
  notifications    Notification[]
  memberships      UserMembership[]
  payments         PaymentTransaction[]

  @@index([email])
}

// Profile dành cho ứng viên
model CandidateProfile {
  id     String @id @default(uuid())
  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  headline String? @db.VarChar(255) // VD: "Senior Backend Developer | Node.js"
  bio      String? @db.Text
  website  String?
  linkedin String?
  github   String?
  address  String? // Địa chỉ

  // Thông tin CV structured (Để search tốt hơn là chỉ lưu file PDF)
  cvUrl String? // Link file gốc (PDF/Word)

  // Public profile visibility (Candidate can publish/unpublish)
  isPublic Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  experiences    Experience[]
  educations     Education[]
  projects       Project[]
  skills         CandidateSkill[]
  applications   Application[]
  savedJobs      SavedJob[]
  companyReviews CompanyReview[]
  interviews     Interview[]
  companyFollows CompanyFollow[]
}

// Profile dành cho nhà tuyển dụng
model RecruiterProfile {
  id     String @id @default(uuid())
  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  companyId String
  company   Company @relation(fields: [companyId], references: [id])

  position String? // Chức vụ trong cty (VD: Talent Acquisition Manager)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  jobsPosted Job[] // Các job do recruiter này đăng
}

// --------------------------------------
// 4. STRUCTURED RESUME DATA (Dữ liệu CV chi tiết)
// --------------------------------------

model Experience {
  id          String           @id @default(uuid())
  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id], onDelete: Cascade)

  companyName String
  position    String
  location    String?
  startDate   DateTime
  endDate     DateTime? // Null = Hiện tại đang làm
  isCurrent   Boolean   @default(false)
  description String?   @db.Text

  createdAt DateTime @default(now())
}

model Education {
  id          String           @id @default(uuid())
  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id], onDelete: Cascade)

  institution  String // Tên trường
  degree       String? // Bằng cấp
  fieldOfStudy String? // Ngành học
  startDate    DateTime
  endDate      DateTime?
  grade        String? // GPA hoặc xếp loại

  createdAt DateTime @default(now())
}

model Project {
  id          String           @id @default(uuid())
  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id], onDelete: Cascade)

  name         String // Tên dự án
  description  String?   @db.Text // Mô tả dự án
  url          String? // Link demo/GitHub
  startDate    DateTime?
  endDate      DateTime?
  isCurrent    Boolean   @default(false) // Đang làm
  technologies String[]  @default([]) // Các công nghệ sử dụng

  createdAt DateTime @default(now())
}

model Skill {
  id      String  @id @default(uuid())
  name    String  @unique // Java, Python, SQL...
  iconUrl String?

  // Relations
  candidates CandidateSkill[]
  jobs       JobSkill[]
}

// Bảng trung gian để lưu level của Skill ứng viên
model CandidateSkill {
  id          String           @id @default(uuid())
  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  skillId     String
  skill       Skill            @relation(fields: [skillId], references: [id])

  level String? // Beginner, Intermediate, Expert

  @@unique([candidateId, skillId])
}

// --------------------------------------
// 5. COMPANY & JOBS (Công ty & Tin tuyển dụng)
// --------------------------------------

model Company {
  id       String  @id @default(uuid())
  name     String
  slug     String  @unique // URL friendly name
  logoUrl  String?
  coverUrl String?
  website  String?

  description String? @db.Text
  industry    String? // Ngành nghề
  companySize String? // 1-10, 11-50, etc.
  foundedYear Int?

  address String?
  city    String?
  country String?

  isVerified Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  recruiters RecruiterProfile[]
  jobs       Job[]
  reviews    CompanyReview[]
  followers  CompanyFollow[]
}

// Đánh giá công ty từ candidate
model CompanyReview {
  id        String  @id @default(uuid())
  companyId String
  company   Company @relation(fields: [companyId], references: [id], onDelete: Cascade)

  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id], onDelete: Cascade)

  rating Int // 1-5 stars
  title  String? @db.VarChar(255) // Tiêu đề review (optional)
  review String? @db.Text // Nội dung review

  // Thông tin chi tiết (optional)
  pros String? @db.Text // Ưu điểm
  cons String? @db.Text // Nhược điểm

  // Có đang làm việc tại công ty này không
  isCurrentEmployee Boolean @default(false)

  // Có recommend công ty này không
  wouldRecommend Boolean @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([companyId, candidateId]) // Mỗi candidate chỉ review 1 lần cho mỗi công ty
  @@index([companyId])
  @@index([candidateId])
  @@index([rating])
}

// Candidate follows company to receive updates/notifications
model CompanyFollow {
  id          String           @id @default(uuid())
  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  companyId   String
  company     Company          @relation(fields: [companyId], references: [id], onDelete: Cascade)

  // Future notification preferences
  notifyOnNewJob    Boolean @default(true)
  notifyOnJobUpdate Boolean @default(true)

  createdAt DateTime @default(now())

  @@unique([candidateId, companyId])
  @@index([companyId])
  @@index([candidateId])
}

model Job {
  id    String @id @default(uuid())
  slug  String @unique
  title String

  companyId String
  company   Company @relation(fields: [companyId], references: [id])

  recruiterId String
  recruiter   RecruiterProfile @relation(fields: [recruiterId], references: [id])

  // Job Details
  description        String   @db.Text // Rich Text HTML
  requirements       String?  @db.Text
  benefits           String?  @db.Text
  interviewQuestions String[] @default([]) // Câu hỏi phỏng vấn do recruiter thiết lập

  type   JobType   @default(FULL_TIME)
  status JobStatus @default(DRAFT)

  // Location
  location String?
  isRemote Boolean @default(false)

  // Salary
  salaryMin          Float?
  salaryMax          Float?
  currency           Currency @default(VND)
  isSalaryNegotiable Boolean  @default(false)

  // Metadata
  experienceLevel String? // Junior, Senior, Lead...
  quantity        Int     @default(1) // Số lượng tuyển

  viewsCount  Int @default(0)
  clicksCount Int @default(0)

  publishedAt DateTime?
  deadline    DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  skills       JobSkill[]
  applications Application[]
  interviews   Interview[]
  savedBy      SavedJob[]
  categories   JobCategory[]

  @@index([title, description])
}

model Category {
  id      String        @id @default(uuid())
  name    String        @unique // IT, Marketing, Sales...
  iconUrl String?
  jobs    JobCategory[]
}

model JobCategory {
  jobId      String
  job        Job      @relation(fields: [jobId], references: [id], onDelete: Cascade)
  categoryId String
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@id([jobId, categoryId])
}

model JobSkill {
  jobId   String
  job     Job    @relation(fields: [jobId], references: [id], onDelete: Cascade)
  skillId String
  skill   Skill  @relation(fields: [skillId], references: [id])

  isRequired Boolean @default(true) // Skill bắt buộc hay ưu tiên

  @@id([jobId, skillId])
}

model SavedJob {
  id          String           @id @default(uuid())
  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  jobId       String
  job         Job              @relation(fields: [jobId], references: [id], onDelete: Cascade)

  savedAt DateTime @default(now())

  @@unique([candidateId, jobId])
}

// --------------------------------------
// 6. APPLICATION & INTERVIEW PROCESS (Quy trình ứng tuyển)
// --------------------------------------

model Application {
  id String @id @default(uuid())

  jobId String
  job   Job    @relation(fields: [jobId], references: [id])

  candidateId String
  candidate   CandidateProfile @relation(fields: [candidateId], references: [id])

  resumeUrl   String? // Snapshot CV tại thời điểm apply
  coverLetter String? @db.Text

  status          ApplicationStatus @default(APPLIED)
  rejectionReason String?           @db.Text // Lý do từ chối (nếu có)

  appliedAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  interviews Interview[]
  history    ApplicationHistory[] // Log lịch sử thay đổi trạng thái
  notes      ApplicationNote[] // Ghi chú nội bộ của team tuyển dụng
  offers     Offer[] // Các offer đã gửi cho ứng viên

  @@unique([jobId, candidateId]) // Một người chỉ apply 1 lần cho 1 job
}

model ApplicationHistory {
  id            String      @id @default(uuid())
  applicationId String
  application   Application @relation(fields: [applicationId], references: [id], onDelete: Cascade)

  status    ApplicationStatus // Trạng thái đã thay đổi
  changedBy String? // User ID của người thực hiện đổi (Recruiter)
  note      String? // Ghi chú thay đổi

  createdAt DateTime @default(now())
}

model ApplicationNote {
  id            String      @id @default(uuid())
  applicationId String
  application   Application @relation(fields: [applicationId], references: [id], onDelete: Cascade)

  authorId String // Recruiter ID
  content  String @db.Text

  createdAt DateTime @default(now())
}

// --------------------------------------
// 6.5. OFFER MANAGEMENT (Quản lý Offer)
// --------------------------------------

enum OfferStatus {
  PENDING // Offer đã được gửi, chờ candidate phản hồi
  ACCEPTED // Candidate đã chấp nhận
  REJECTED // Candidate đã từ chối
  EXPIRED // Offer hết hạn
  WITHDRAWN // Recruiter đã rút lại offer
}

model Offer {
  id            String      @id @default(uuid())
  applicationId String
  application   Application @relation(fields: [applicationId], references: [id], onDelete: Cascade)

  // Thông tin offer
  title          String // Tiêu đề offer (ví dụ: "Software Engineer - Full-time")
  salaryMin      Float? // Mức lương tối thiểu
  salaryMax      Float? // Mức lương tối đa
  salaryCurrency Currency  @default(USD)
  employmentType String? // FULL_TIME, PART_TIME, CONTRACT, etc.
  startDate      DateTime? // Ngày bắt đầu làm việc dự kiến
  expirationDate DateTime // Hạn chót để candidate phản hồi
  location       String? // Địa điểm làm việc
  isRemote       Boolean   @default(false)

  // Nội dung offer
  description String? @db.Text // Mô tả chi tiết về offer
  benefits    String? @db.Text // Phúc lợi (health insurance, PTO, etc.)
  terms       String? @db.Text // Điều khoản và điều kiện

  // Trạng thái
  status OfferStatus @default(PENDING)

  // Response từ candidate
  responseNote String?   @db.Text // Ghi chú từ candidate khi accept/reject
  respondedAt  DateTime? // Thời điểm candidate phản hồi

  // Metadata
  sentBy    String? // Recruiter ID người gửi offer
  sentAt    DateTime @default(now())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([applicationId])
  @@index([status])
}

// --------------------------------------
// 7. INTERVIEW MANAGEMENT (Phỏng vấn)
// --------------------------------------

// --------------------------------------
// CẬP NHẬT ENUMS CHO AI
// --------------------------------------

enum InterviewType {
  AI_VIDEO // AI hiện hình/video phỏng vấn
  AI_VOICE // Chỉ thoại
  AI_CHAT // Chat bot phỏng vấn
  CODING_TEST // Bài test code tự động
}

enum InterviewStatus {
  PENDING // Đã tạo link, chưa bắt đầu
  IN_PROGRESS // Đang phỏng vấn
  PROCESSING // Phỏng vấn xong, AI đang phân tích
  COMPLETED // Đã có kết quả
  FAILED // Lỗi kỹ thuật
  EXPIRED // Ứng viên không tham gia quá hạn
}

// --------------------------------------
// MODULE PHỎNG VẤN AI (AI INTERVIEW)
// --------------------------------------

model Interview {
  id String @id @default(uuid())

  // Interview can be linked to an Application OR standalone (mock interview not tied to an application)
  applicationId String?
  application   Application? @relation(fields: [applicationId], references: [id], onDelete: SetNull)

  // Optional direct links for standalone interviews
  candidateId String?
  candidate   CandidateProfile? @relation(fields: [candidateId], references: [id], onDelete: SetNull)

  jobId String?
  job   Job?    @relation(fields: [jobId], references: [id], onDelete: SetNull)

  // Cấu hình phỏng vấn
  title  String // VD: "Vòng 1: AI Screening"
  type   InterviewType   @default(AI_VIDEO)
  status InterviewStatus @default(PENDING)

  // Link & Token truy cập
  accessCode String   @unique // Mã để ứng viên nhập vào phòng p/v
  sessionUrl String? // Link phòng họp ảo (nếu dùng 3rd party)
  expiresAt  DateTime // Hạn chót để thực hiện phỏng vấn

  // Kết quả tổng quan (AI Summary)
  startedAt       DateTime? // Thời điểm ứng viên bắt đầu
  endedAt         DateTime? // Thời điểm kết thúc
  durationSeconds Int? // Tổng thời lượng (giây)

  overallScore   Float? // Điểm trung bình (thang 10 hoặc 100)
  summary        String? @db.Text // Tóm tắt đánh giá chung của AI
  recommendation String? // AI gợi ý: "Nên tuyển", "Cân nhắc", "Loại"

  // Dữ liệu thô
  recordingUrl   String? // Link file ghi âm/ghi hình (S3/Cloudinary)
  fullTranscript String? @db.Text // Toàn bộ nội dung hội thoại dạng text

  // Dữ liệu phân tích sâu (Dùng JSONB của Postgres cực mạnh)
  // Lưu: Tone giọng, Cảm xúc (Nervous, Confident), Keywords, Soft skills detected
  aiAnalysisData Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  exchanges InterviewExchange[] // Chi tiết từng câu hỏi - đáp
}

// Lưu chi tiết từng lượt Hỏi - Đáp (Turn-by-turn)
// Để sau này replay lại xem ứng viên trả lời câu 3 như thế nào
model InterviewExchange {
  id          String    @id @default(uuid())
  interviewId String
  interview   Interview @relation(fields: [interviewId], references: [id], onDelete: Cascade)

  orderIndex Int // Câu hỏi số mấy (1, 2, 3...)

  // Phần câu hỏi của AI
  questionText     String  @db.Text
  questionCategory String? // VD: "Introduction", "Technical", "Behavioral"

  // Phần trả lời của Ứng viên
  answerText     String? @db.Text // Text sau khi Speech-to-Text
  answerAudioUrl String? // Audio đoạn trả lời đó (nếu muốn nghe lại từng câu)

  // AI chấm điểm từng câu
  score    Float? // Điểm cho câu trả lời này
  feedback String? @db.Text // Nhận xét: "Trả lời đúng trọng tâm nhưng thiếu ví dụ"

  durationSeconds Int? // Thời gian suy nghĩ + trả lời

  createdAt DateTime @default(now())

  @@index([interviewId, orderIndex]) // Index để query sắp xếp nhanh
}

// (Optional) Ngân hàng câu hỏi để AI bốc ngẫu nhiên
model QuestionBank {
  id         String @id @default(uuid())
  content    String @db.Text
  category   String // Java, React, Communication...
  difficulty String // Easy, Medium, Hard

  expectedKeywords String[] // Các từ khóa AI nên tìm trong câu trả lời

  createdAt DateTime @default(now())
}

// --------------------------------------
// 8. SYSTEM MESSAGING & NOTIFICATIONS
// --------------------------------------

model Message {
  id String @id @default(uuid())

  senderId String
  sender   User   @relation("SentMessages", fields: [senderId], references: [id])

  receiverId String
  receiver   User   @relation("ReceivedMessages", fields: [receiverId], references: [id])

  content String  @db.Text
  isRead  Boolean @default(false)

  // Context (Optional): Tin nhắn này liên quan đến Job/Application nào
  jobId         String?
  applicationId String?

  createdAt DateTime @default(now())
}

model Notification {
  id     String @id @default(uuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  title   String
  message String
  type    String // SYSTEM, APPLICATION_UPDATE, INTERVIEW_REMINDER...
  isRead  Boolean @default(false)

  link String? // Link điều hướng khi click

  createdAt DateTime @default(now())
}

// --------------------------------------
// 9. MEMBERSHIP & PAYMENT SYSTEM (Hệ thống thành viên & thanh toán)
// --------------------------------------

/**
 * Membership Plan Types
 * Defines available membership plans for each user role
 * Example: FREE, VIP for Candidates; FREE, VIP for Recruiters
 */
enum MembershipPlanType {
  FREE // Free tier with limited features
  VIP // Premium tier with full features
}

/**
 * Membership Status
 * Tracks the current state of a user's membership
 */
enum MembershipStatus {
  ACTIVE   // Membership is active and valid
  EXPIRED  // Membership has expired
  CANCELED // User canceled their membership
  PENDING  // Payment pending, membership not yet activated
}

/**
 * Payment Status
 * Tracks the status of payment transactions
 */
enum PaymentStatus {
  PENDING    // Payment link created, waiting for user payment
  COMPLETED  // Payment successful, membership activated
  FAILED     // Payment failed
  EXPIRED    // Payment link expired
  CANCELED   // Payment canceled by user
}

/**
 * MembershipPlan Model
 * Defines the available membership plans in the system
 * Each plan has specific features and limits
 * 
 * Design Decision:
 * - Separate plans for Candidates and Recruiters (different needs)
 * - Plans are predefined in the system (not user-created)
 * - Extensible: can add more plan types in the future (e.g., ENTERPRISE)
 */
model MembershipPlan {
  id   String @id @default(uuid())
  name String @unique // e.g., "VIP Candidate", "VIP Recruiter"
  
  // Plan type and target role
  planType MembershipPlanType @default(FREE)
  role     UserRole           // CANDIDATE or RECRUITER
  
  // Pricing
  price    Float   // Price in VND (0 for FREE plan)
  currency Currency @default(VND)
  duration Int      // Duration in days (e.g., 30 for monthly, 365 for yearly)
  
  // Feature limits (for FREE plans)
  maxInterviews      Int? // Maximum interview sessions allowed (null = unlimited)
  maxMatchingViews   Int? // Maximum CV-Job matching views (null = unlimited)
  maxJobPostings     Int? // Maximum job postings (null = unlimited, for recruiters)
  
  // Feature flags (for VIP plans)
  unlimitedInterviews    Boolean @default(false) // VIP: unlimited interviews
  fullMatchingInsights   Boolean @default(false) // VIP: detailed matching insights
  rankedCandidateList    Boolean @default(false) // VIP: ranked candidate list for recruiters
  directCandidateContact Boolean @default(false) // VIP: can contact candidates directly
  
  // Description and metadata
  description String? @db.Text // Plan description for users
  features    String[] @default([]) // List of features (e.g., ["Unlimited Interviews", "Full Matching Insights"])
  
  isActive Boolean @default(true) // Whether this plan is currently available
  
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  memberships UserMembership[]
  transactions PaymentTransaction[]
  
  @@index([role, planType])
  @@index([isActive])
}

/**
 * UserMembership Model
 * Tracks the membership status of each user (Candidate or Recruiter)
 * 
 * Design Decision:
 * - One active membership per user per role at a time
 * - Membership history is preserved (for analytics)
 * - Auto-expires based on endDate
 * 
 * Business Rules:
 * - When a user purchases VIP, their membership is extended or upgraded
 * - FREE membership is automatically assigned on user registration
 * - Expired memberships revert to FREE plan features
 */
model UserMembership {
  id     String @id @default(uuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  planId String
  plan   MembershipPlan @relation(fields: [planId], references: [id])
  
  // Membership period
  startDate DateTime @default(now())
  endDate   DateTime // When membership expires
  
  // Status tracking
  status MembershipStatus @default(ACTIVE)
  
  // Auto-renewal (future feature)
  autoRenew Boolean @default(false)
  
  // Metadata
  notes String? @db.Text // Admin notes or cancellation reason
  
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  transactions PaymentTransaction[]
  
  @@index([userId, status])
  @@index([endDate])
  @@index([status])
}

/**
 * PaymentTransaction Model
 * Records all payment transactions for membership purchases
 * 
 * Design Decision:
 * - Store complete payment data from PayOS for audit trail
 * - Link to both MembershipPlan and UserMembership
 * - Support idempotency (prevent duplicate processing)
 * 
 * PayOS Integration:
 * - orderCode: Unique order identifier from PayOS
 * - paymentLinkId: PayOS payment link ID
 * - rawResponse: Full PayOS webhook response (JSON) for debugging
 */
model PaymentTransaction {
  id     String @id @default(uuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  planId String
  plan   MembershipPlan @relation(fields: [planId], references: [id])
  
  membershipId String?
  membership   UserMembership? @relation(fields: [membershipId], references: [id], onDelete: SetNull)
  
  // Payment details
  orderCode      String  @unique // PayOS order code (unique to prevent duplicates)
  amount         Float   // Amount paid
  currency       Currency @default(VND)
  paymentLinkId  String? // PayOS payment link ID
  paymentLinkUrl String? // PayOS payment URL
  
  // Payment status
  status PaymentStatus @default(PENDING)
  
  // PayOS webhook data (stored as JSON for audit)
  rawRequest  Json? // Original payment request sent to PayOS
  rawResponse Json? // PayOS webhook response (complete data)
  
  // Timestamps
  paidAt    DateTime? // When payment was completed
  expiredAt DateTime? // When payment link expires
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  
  // Error tracking
  errorMessage String? @db.Text // If payment failed, store error reason
  
  @@index([userId])
  @@index([orderCode])
  @@index([status])
  @@index([createdAt])
}
